header spacing/layout fixes

--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ header #mc_embed_signup {
   margin-top: 20px;
 }
 
+.header-message {
+  width: 195px;
+}
+
 header h3 {
   font-weight: 100;
   letter-spacing: 1px;
@@ -98,11 +102,14 @@ header h4 {
 
 @media (min-width: 450px){
   .header-message {
-    width: 55%;
+    width: 250px;
   }
 }
 
 @media (min-width: 600px){
+  .header-message {
+    width: 294px;
+  }
   header #mc_embed_signup {
     display: block;
   }
@@ -110,7 +117,7 @@ header h4 {
 
 @media (min-width: 700px){
   header h3 {
-    font-size: 1.3em;
+    font-size: 1.4em;
   }
 
   header h4 {
@@ -119,8 +126,11 @@ header h4 {
 }
 
 @media (min-width: 900px){
+  .header-message {
+    width: 350px;
+  }
   header h3 {
-    font-size: 1.5em;
+    font-size: 1.8em;
     margin-top: 50px;
   }
   header h4 {
@@ -128,9 +138,12 @@ header h4 {
   }
 }
 
-@media (min-width: 1100px){
+@media (min-width: 1200px){
+  .header-message {
+    width: 435px;
+  }
   header h3 {
-    font-size: 1.6em;
+    font-size: 2.2em;
     margin-top: 75px;
   }
   header h4 {
